fix: increase max-height of menu dropdown to 100vh for better visibility

--- a/assets/bi-custom.css
+++ b/assets/bi-custom.css
@@ -145,7 +145,7 @@ h5,
 }
 
 .menu-dropdown {
-    max-height: 76vh;
+    max-height: 100vh;
 }
 
 .menu-dropdown__wrapper {
